tools/hermes/tests/fixtures/associated_types/expected.stderr
  × unexpected token '...'; expected term
    ╭─[[PROJECT_ROOT]/src/lib.rs:12:7]
 11 │ /// isSafe :
 12 │ ///   ...
    ·       ─┬─
    ·        ╰── here
 13 │ /// ```
    ╰────

Error: Lean verification failed
